<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.gzlabs</groupId>
    <artifactId>jpa-explode</artifactId>
    <name>GZLabs - Spring JPA Explode</name>
    <description>Library to explode JPA entity object with indicated deep</description>
    <packaging>jar</packaging>
    <version>1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>7.0</version>
        </dependency>
        
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jpa</artifactId>
            <version>1.10.1.RELEASE</version>
            <exclusions>
                <exclusion>
                    <artifactId>spring-orm</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-tx</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-beans</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-aop</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-core</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-context</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
            </exclusions>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.gwt.xml</include>
                    <include>**/client/**/*.java</include>
                    <include>**/shared/**/*.java</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.3.0.M1</version>
                <configuration>
                    <jvmArgs>-Xms512m -Xmx1024m</jvmArgs>
                    <!--<extraJvmArgs>-XX:MaxPermSize=3072M -Xmx3072M -Xss2M</extraJvmArgs>-->
                    <extraJvmArgs>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</extraJvmArgs>
                    <scanIntervalSeconds>3</scanIntervalSeconds>
                    <webApp>
                        <!--Contexto da aplicación--> 
                        <contextPath>/panacea</contextPath>
                    </webApp>
                    <httpConnector>
                        <!--host>localhost</host -->
                        <port>9999</port>
                    </httpConnector>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
